@@ -1,3 +1,12 @@
+2015-10-03  Fred Kiefer <fredkiefer@gmx.de>
+
+	* Source/NSPropertyList.m (GSBinaryPLGenerator-storeCount:): Use
+	0x12 instead of 0x13 for integer count.
+	* Source/NSPropertyList.m (GSBinaryPLParser-readCountAt:): Handle
+	0x12 correctly. Use same code for 0x13 to read old incorrect
+	written data.
+	Based on change by Josh Freeman <pikopixel@twilightedge.com>
+
 2015-09-23  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Source/NSXMLParser.m:
